<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:title="@string/profile"
        android:id="@+id/profile"
        android:icon="@drawable/settings"
        app:showAsAction="ifRoom"/>
    <item
        android:title="@string/catalog"
        android:id="@+id/cats"
        android:icon="@drawable/images"
        app:showAsAction="ifRoom"/>
    <item
        android:title="@string/setting"
        android:id="@+id/setting"
        android:icon="@drawable/settings"
        app:showAsAction="ifRoom"/>
    <item
        android:title="@string/logOut"
        android:id="@+id/ex"
        android:icon="@drawable/exit_run"
        app:showAsAction="ifRoom"/>

</menu>